--- a/docs/package.json
+++ b/docs/package.json
@@ -2,7 +2,9 @@
   "name": "@tuist/rosalind",
   "devDependencies": {
     "vitepress": "^1.3.2",
-    "wrangler": "^3.70.0"
+    "wrangler": "^3.70.0",
+    "esbuild": "0.25.0",
+    "cookie": ">=0.7.0"
   },
   "scripts": {
     "dev": "vitepress dev",
